--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,7 @@
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations-java5</artifactId>
       <version>20.1.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
