--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
+import java.time.Year
+
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
+    id 'signing'
 }
 
 group 'xyz.tozymc.spigot'
@@ -9,25 +13,24 @@ description = 'Command libraries for spigot plugin.'
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
 repositories {
     mavenCentral()
     maven {
-        name 'spigot-repo'
-        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
     }
 }
 
 dependencies {
-    implementation 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
-    implementation 'org.jetbrains:annotations-java5:20.1.0'
+    api 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+    api 'org.jetbrains:annotations-java5:20.1.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:1.7.0'
-}
-
-java {
-    withSourcesJar()
-    withJavadocJar()
 }
 
 test {
@@ -36,4 +39,84 @@ test {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+javadoc {
+    source = sourceSets.main.allJava
+    if (project.hasProperty("javadocExecutable")) {
+        executable = javadocExecutable
+    }
+    options {
+        charSet 'utf-8'
+        source '1.8'
+        bottom "Copyright &#169; ${Year.now()} TozyMC. All rights reserved."
+        links << 'https://docs.oracle.com/javase/8/docs/api/'
+        links << 'https://hub.spigotmc.org/javadocs/spigot/'
+        links << 'https://javadoc.io/doc/org.jetbrains/annotations-java5/20.1.0/'
+    }
+    exclude 'xyz/tozymc/spigot/api/command/handler/**'
+    if (JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'commands-api'
+            from components.java
+            convertToProvidedScope(pom)
+            pom {
+                name = 'commands-api'
+                url = 'https://github.com/TozyMC/commands-api'
+                inceptionYear = '2021'
+
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://github.com/TozyMC/commands-api/blob/main/LICENSE'
+                    }
+                }
+
+                scm {
+                    connection = 'scm:git:git://github.com/TozyMC/commands-api.git'
+                    developerConnection = 'scm:git:ssh://github.com:TozyMC/commands-api.git'
+                    url = 'https://github.com/TozyMC/commands-api'
+                }
+
+                developers {
+                    developer {
+                        id = 'tozymc'
+                        name = 'TozyMC'
+                        url = 'http://tozymc.xyz'
+                    }
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            url = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
+            credentials {
+                username ossrhUsername
+                password ossrhPassword
+            }
+        }
+    }
+}
+
+def convertToProvidedScope(pom) {
+    pom.withXml {
+        asNode().dependencies.'*'.findAll() {
+            configurations.api.allDependencies.find { dep ->
+                dep.name == it.artifactId.text()
+            }
+        }.each() {
+            it.scope*.value = 'provided'
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
 }
