--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'xyz.tozymc.spigot'
-version '2.1-development'
+version '2.1'
 description = 'Command libraries for spigot plugin.'
 
 sourceCompatibility = '1.8'
@@ -68,6 +68,7 @@ publishing {
             convertToProvidedScope(pom)
             pom {
                 name = 'commands-api'
+                description = project.description
                 url = 'https://github.com/TozyMC/commands-api'
                 inceptionYear = '2021'
 
